fixed some text formatting bugs that cropped up with the addition of the flex boxes

--- a/gptclone/static/style.css
+++ b/gptclone/static/style.css
@@ -74,6 +74,12 @@ body {
     padding: 5px;
     border: 2px black;
     margin-right: 10px; /* Add margin between children */
+
+    /*
+    flex-wrap: wrap;
+    word-break: break-word;
+    */
+
 }
 .flex-child:last-child {
   margin-right: 0; /* Remove margin for the last child */
